@@ -89,7 +89,7 @@
         <copy-rename-maven-plugin.version>1.0</copy-rename-maven-plugin.version>
         <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-        <maven-war-plugin.version>3.0.0</maven-war-plugin.version>
+        <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
         <jetty-maven-plugin.version>9.4.53.v20231009</jetty-maven-plugin.version>
@@ -118,7 +118,7 @@
         <log4j.version>2.17.2</log4j.version>
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <mockito.version>2.7.22</mockito.version>
+        <mockito.version>4.11.0</mockito.version>
         <mathjax.version>2.7.0</mathjax.version>
         <spring.version>5.3.39</spring.version>
         <spring-security.version>5.8.9</spring-security.version>
@@ -144,7 +144,7 @@
         <jsoup.version>1.17.2</jsoup.version>
         <sass-maven-plugin.version>2.22</sass-maven-plugin.version>
         <jackson-databind.version>2.16.1</jackson-databind.version>
-        <cxf-maven-plugin.version>3.1.10</cxf-maven-plugin.version>
+        <cxf-maven-plugin.version>3.5.8</cxf-maven-plugin.version>
         <jaxb2-maven-plugin.version>2.3.1</jaxb2-maven-plugin.version>
         <jaxb.version>2.3.1</jaxb.version>
         <jaxb2-basics.version>0.11.1</jaxb2-basics.version>
@@ -167,7 +167,7 @@
        <httpclient.version>4.5.13</httpclient.version> <!--  5.4-alpha1 4.5.3-->
         <!-- Sonar -->
         <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
-        <sonar-jacoco-plugin.version>0.8.7</sonar-jacoco-plugin.version>
+        <sonar-jacoco-plugin.version>0.8.11</sonar-jacoco-plugin.version>
         <!-- Haelcast -->
         <hazelcast.version>5.3.6</hazelcast.version>
         <!-- Default authentication -->
@@ -549,6 +549,12 @@
                 <artifactId>validation-api</artifactId>
                 <version>${javax-validation.version}</version>
             </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.2</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- Hazelcast -->
             <dependency>
                 <groupId>com.hazelcast</groupId>
@@ -711,6 +717,23 @@
                             <include>**/*Tests.java</include>
                             <include>**/*Test_IT.java</include>
                         </includes>
+                        <argLine>
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                            --add-opens java.base/java.text=ALL-UNNAMED
+                            --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                            --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                            --add-opens java.base/java.security=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                            --add-opens java.base/java.io=ALL-UNNAMED
+                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                            --add-opens java.base/sun.security.util=ALL-UNNAMED
+                        </argLine>
+                        <systemPropertyVariables>
+                            <powermock.classloading>javagent</powermock.classloading>
+                        </systemPropertyVariables>
                     </configuration>
                     <dependencies>
                         <dependency>
